Fix pagination alignment

--- a/src/containers/OrganizationList/OrganizationList.scss
+++ b/src/containers/OrganizationList/OrganizationList.scss
@@ -1,5 +1,6 @@
 
 .paginationdiv {
-  position: relative;
-  left: 1070px;
+  position: absolute;
+  padding: 10px;
+  right: 5px;
 }
